@@ -80,7 +80,44 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
     <td>2.4.0</td>
     <td><a href="mailto:wferiATafavant.elte.hu">Ferenc Wagner</a></td>
   </tr>
+    
+  <tr>
+    <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
+    <td>
+      Fedora Core 
+    </td>
+    <td>
+      1, 2
+    </td>
+    <td> <b>Go to <a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
+	  Planet CCRMA</a></b>
+    </td>
+    <td>2.4.1</td>
+    <td>
+      <a href="mailto:planetccrma@ccrma.stanford.edu">
+	PlanetCCRMA</a></td>
+  </tr>
 
+
+  <tr>
+    <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
+    <td>
+      Red Hat 
+    </td>
+    <td>
+      8, 9
+    </td>
+    <td>
+      <b>Go to
+	<a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">Planet CCRMA</a>
+      </b>
+    </td>
+    <td>2.2.5</td>
+    <td>
+      <a href="mailto:planetccrma@ccrma.stanford.edu">PlanetCCRMA</a></td>
+  </tr>
+
+    
   <tr>
     <td><p align="center"><img src="@IMAGES@mandrake-logo.jpeg"></p></td>
     <td>
@@ -193,6 +230,108 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
 
 
 
+
+
+<h2>Download LilyPond 2.5</h2>
+
+
+<b>Note</b> <a name="ec-fonts"></a>
+LilyPond 2.5 requires the <tt>ec-fonts-mftraced</tt> package from
+<a href="http://lilypond.org/download/fonts/">here</a>
+
+<a name="2.5"></a>
+<table width="100%" border="0" rules="rows" cellpadding="3">
+  
+  
+  <!-- use this as template for new entry !-->
+  <tr>
+    <th></th>
+    <th>Platform</th>
+    <th>Version</th>
+    <th>Go here</th>
+    <th>LilyPond version</th>
+    <th>Packager</th>
+  </tr>
+
+  <tr bgcolor="#e8ffe8">
+    <td>
+    </td>
+    
+    <td>
+      <font size="+1"><b>GNU/Linux</b></font>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+
+
+  <tr>
+    <td>
+      <p align="center">
+	<img src="@IMAGES@redhat-logo.png">
+      </p>
+    </td>
+    <td>
+      Fedora Core
+    </td>
+    <td>
+      3
+    </td>
+    <td><b>Download 
+	<a href="http://lilypond.org/download/binaries/Fedora-3/lilypond-2.5.0-1.i386.rpm">lilypond</a>,
+	<a
+	   href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.5.0-1.i386.rpm">documentation</a></b>
+      (<a href="#ec-fonts">NOTE</a>)
+    </td>
+    <td>2.5.0</td>
+    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
+  </tr>
+
+
+  <tr bgcolor="#e8ffe8">
+    <td>
+    </td>
+    
+    <td>
+      <font size="+1"><b>Other</b></font>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+  
+  <tr>
+    <td></td>
+    <td>Source</td>
+    <td></td>
+    <td><b>Download 
+	<a
+	   href="http://lilypond.org/download/v2.5/lilypond-2.5.0.tar.gz">tarball</a>
+	(<a href="../devel/#warning">warning</a>)
+      </b>
+    </td>
+    <td>
+      2.5.0
+    </td>
+    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development
+	team</a></td>
+  </tr>
+  
+</table>
+
+
+
 <h2>Download LilyPond 2.2</h2>
 
 <a name="2.2"></a>
@@ -212,40 +351,24 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
   <tr bgcolor="#e8ffe8" >
     <td></td><td colspan="6"><h3>GNU/Linux</h3></td>
   </tr>
-  
+
+
   <tr>
     <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
     <td>
       Red Hat 
     </td>
     <td>
-      7.3, 8, 9
+      7.3
     </td>
     <td>
       <b>Go to
 	<a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">Planet CCRMA</a>
       </b>
     </td>
-    <td>2.2.5</td>
+    <td>2.2.6</td>
     <td>
       <a href="mailto:planetccrma@ccrma.stanford.edu">PlanetCCRMA</a></td>
-  </tr>
-
-  <tr>
-    <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
-    <td>
-      Fedora Core 
-    </td>
-    <td>
-      1, 2
-    </td>
-    <td> <b>Go to <a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
-	  Planet CCRMA</a></b>
-    </td>
-    <td>2.2.5</td>
-    <td>
-      <a href="mailto:planetccrma@ccrma.stanford.edu">
-	PlanetCCRMA</a></td>
   </tr>
 
   <tr>
@@ -440,7 +563,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
 
 <p>
 
-If your platform is not listed, please help by <a
+If your platform is not listed then help by <a
 href="../devel/packaging.html">packaging LilyPond</a>.
 </p>
 
