@@ -146,7 +146,7 @@
 
 	  <tr>
 	    <td>Development</td>
-	    <td>2.5 CVS</td>
+	    <td>2.5.0</td>
 	    <td>
 	      <a href="../doc/v2.5/Documentation/out-www/">Documentation</a>,
 	      <a href="download/#2.5">download</a>.
