@@ -1,3 +1,7 @@
+2004-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/download/index.html: add planet ccrma release.
+
 2004-11-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/about/doneet.html: update donations page.
